# calamares-branding

./: .gitattributes  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  calamares-branding.qbs  settings.conf
.github/workflows/: build.yml
.travis/: build.sh
.tx/: config
branding/: CMakeLists.txt  FocusText.qml  SlideImage.qml  Slideshow.qml  branding.desc  branding.qbs
conf/: CMakeLists.txt  settings.conf
data/: CMakeLists.txt  calamares.desktop  calamares.sh  data.qbs
modules/: CMakeLists.txt  displaymanager.conf  modules.qbs
modules/displaymanager/: CMakeLists.txt  displaymanager.conf
modules/ostree/: main.py  module.desc  ostree.conf
modules/ostree-bootloader/: main.py  module.desc  ostree-bootloader.conf
modules/ostree-finalize/: main.py  module.desc
modules/prepare/: main.py  module.desc
scripts/: calamares.desktop  run-calamares  scripts.qbs
settings/: CMakeLists.txt  bootloader.conf  grubcfg.conf  packages.conf  services-systemd.conf  services.conf  settings.conf  settings.qbs  unpackfs.conf  welcome.conf
src/live-welcome/: CMakeLists.txt  io.liri.LiveWelcome.desktop  io.liri.LiveWelcome.desktop.in  main.cpp  runner.cpp  runner.h
src/live-welcome/qml/: main.qml
src/live-welcome/translations/: io.liri.LiveWelcome_it.desktop  liri-live-welcome.ts  liri-live-welcome_it.ts
src/ostree-install/: CMakeLists.txt  calamares-ostree-install
